Fix: ekf_localization.yaml change param:bask_link_frame to base_footprint

--- a/localization/localization_run/config/ekf_localization.yaml
+++ b/localization/localization_run/config/ekf_localization.yaml
@@ -6,7 +6,7 @@ publish_tf: false
  
 # Coordinate frame specification
 odom_frame: odom
-base_link_frame: base_link
+base_link_frame: base_footprint
 world_frame: odom
 # map_frame: map
  
