Feat: add navigation with 3-wheeled omni robot, It can move but not that good

--- a/localization/OpenBase/ROS/open_base/CMakeLists.txt
+++ b/localization/OpenBase/ROS/open_base/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   message_generation
   geometry_msgs
+  tf2_ros
 )
 find_package(cmake_modules REQUIRED)
 
