--- a/localization/localization_run/config/amcl.yaml
+++ b/localization/localization_run/config/amcl.yaml
@@ -3,9 +3,9 @@ min_particles:        500       # 100,500
 max_particles:        5000     # 5000
 kld_err:              0.05      # 0.01, 0.05
 kld_z:                0.99      # 0.99
-update_min_d:         0.1       # 0.2
+update_min_d:         0.05       # 0.2
 update_min_a:         0.5235    # 0.5235
-resample_interval:    3         # 2, 1
+resample_interval:    1         # 2, 1
 transform_tolerance:  0.2       # 0.1, 0.2
 recovery_alpha_slow:  0.001     # 0.0, 0.0, 0.001
 recovery_alpha_fast:  0.1       # 0.0, 0.0, 0.1
@@ -18,13 +18,13 @@ initial_cov_aa:       68.53   # 0.06853
 gui_publish_rate:     10.0      # -1.0, 10
 save_pose_rate:       0.5       # 0.5
 use_map_topic:        true      # false
-first_map_only:       false     # false
+first_map_only:       true     # false
 
 # Laser Model Parameters 
 laser_min_range:            -1.0   # -1.0
 laser_max_range:            -1.0   # -1.0
 laser_max_beams:            180    # 180
-laser_z_hit:                0.5   # 0.95, 0.5
+laser_z_hit:                0.85   # 0.95, 0.5
 laser_z_short:              0.05    # 0.1,  0.05
 laser_z_max:                0.05   # 0.05 
 laser_z_rand:               0.05   # 0.05, 0.5
@@ -34,7 +34,7 @@ laser_likelihood_max_dist:  2.0    # 2.0
 laser_model_type:           likelihood_field
 
 # Odometery model parameters
-odom_model_type:  diff
+odom_model_type:  omni
 odom_alpha1:      1.0    # 0.2 rr
 odom_alpha2:      0.5   # 0.2 rt
 odom_alpha3:      1.0    # 0.2,0.8 tt
