--- a/localization/localization_run/config/amcl.yaml
+++ b/localization/localization_run/config/amcl.yaml
@@ -24,22 +24,22 @@ first_map_only:       true     # false
 laser_min_range:            -1.0   # -1.0
 laser_max_range:            -1.0   # -1.0
 laser_max_beams:            180    # 180
-laser_z_hit:                0.85   # 0.95, 0.5
-laser_z_short:              0.05    # 0.1,  0.05
-laser_z_max:                0.05   # 0.05 
-laser_z_rand:               0.05   # 0.05, 0.5
+laser_z_hit:                0.94   # 0.95, 0.5
+laser_z_short:              0.02    # 0.1,  0.05
+laser_z_max:                0.02   # 0.05 
+laser_z_rand:               0.02   # 0.05, 0.5
 laser_sigma_hit:            0.2    # 0.2   
 laser_lambda_short:         0.1    # 0.1
 laser_likelihood_max_dist:  2.0    # 2.0
-laser_model_type:           likelihood_field
+laser_model_type:           likelihood_field  # likelihood_field
 
 # Odometery model parameters
 odom_model_type:  omni
-odom_alpha1:      1.0    # 0.2 rr
-odom_alpha2:      0.5   # 0.2 rt
-odom_alpha3:      1.0    # 0.2,0.8 tt
-odom_alpha4:      0.5   # 0.2 tr
-odom_alpha5:      0.5    # 0.2,0.1
+odom_alpha1:      20.0    # 0.2 rr
+odom_alpha2:      20.0   # 0.2 rt
+odom_alpha3:      20.0    # 0.2,0.8 tt
+odom_alpha4:      20.0   # 0.2 tr
+odom_alpha5:      20.0    # 0.2,0.1
 odom_frame_id:    odom 
 base_frame_id:    base_footprint 
 global_frame_id:  map 
