--- a/localization/localization_run/config/amcl.yaml
+++ b/localization/localization_run/config/amcl.yaml
@@ -40,6 +40,6 @@ odom_alpha2:      20.0   # 0.2 rt
 odom_alpha3:      20.0    # 0.2,0.8 tt
 odom_alpha4:      20.0   # 0.2 tr
 odom_alpha5:      20.0    # 0.2,0.1
-odom_frame_id:    odom 
-base_frame_id:    base_footprint 
-global_frame_id:  map 
+# odom_frame_id:    odom 
+# base_frame_id:    base_footprint 
+# global_frame_id:  map 
