--- a/localization/elevator_classifier/config/classifier_tradition.yaml
+++ b/localization/elevator_classifier/config/classifier_tradition.yaml
@@ -1,1 +1,6 @@
+# classify which door is open
 distance_threshold: 2.4
+
+# classify when you are in the elevator. door is open or closed
+distance_thres: 2
+n_beams_over_thres: 50
