--- a/localization/ethzasl_icp_mapping/ethzasl_icp_mapper/CMakeLists.txt
+++ b/localization/ethzasl_icp_mapping/ethzasl_icp_mapper/CMakeLists.txt
@@ -19,7 +19,9 @@ interactive_markers
 ethzasl_gridmap_2d 
 message_generation 
 libpointmatcher
+libnabo
 )
+
 
 # This was tested for a system install of libpointmatcher
 find_package(libpointmatcher CONFIG)
